# torrent-hound

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ruff.toml  torrent-hound-py3.py  torrent-hound.py  torrent_hound.py
.github/workflows/: ci.yml  publish.yml  release.yml
tests/: conftest.py  test_argcomplete_integration.py  test_base_helpers.py  test_config.py  test_eztv.py  test_fallback_chain.py  test_json_output.py  test_real_debrid.py  test_result_cache.py  test_switch_dispatch.py  test_tpb_metadata_fetch.py  test_tpb_parser.py  test_tui.py  test_yts_metadata_fetch.py  test_yts_parser.py
tests/fixtures/: apibay_search_ubuntu.json  apibay_torrent_detail.json  eztv_search_no_hits.json  eztv_search_severance.json  imdb_suggestion_severance.json  tpb_detail_R1.html  tpb_detail_R2.html  tpb_detail_R3.html  tpb_detail_R8.html  tpb_detail_iso.html  tpb_detail_movie.html  tpb_search_modern_layout.html  tpb_search_no_hits.html  tpb_search_ubuntu.html  yts_movie_details.json  yts_search_interstellar.json
torrent_hound/: __init__.py  __main__.py  _monolith.py  cache.py  cli.py  config.py  realdebrid.py  repl.py  state.py  tui.py  ui.py
torrent_hound/sources/: __init__.py  base.py  eztv.py  legacy_1337x.py  tpb.py  yts.py
