[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-hound"
version = "2.2.3-dev"
description = "Search torrents from multiple websites via the CLI"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.9",
    "requests>=2.20,<3",
    "pyperclip>=1.7",
    "rich>=12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
torrent-hound = "torrent_hound:main"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE"]
ignore = ["E501", "E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
