[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-hound"
dynamic = ["version"]
description = "Search torrents from multiple websites via the CLI"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.28,<3",
    "pyperclip>=1.8",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli_w>=1.0",
    "argcomplete>=3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pip-tools"]

[project.scripts]
torrent-hound = "torrent_hound:main"

[tool.setuptools.packages.find]
include = ["torrent_hound*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE"]
ignore = ["E501", "E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. v2.3.0 → "2.3.0").
# Between tags, dev builds get auto-suffixed (e.g. "2.3.1.dev3+gabc1234").
